# SOFAFramework

./: CMakeLists.txt
applications/plugins/ContinuousCollision/: CMakeLists.txt  ContinousFrictionContact.cpp  ContinuousBarycentricDistanceLMConstraintContact.cpp  ContinuousCollision.txt  ContinuousContactMapper.cpp  ContinuousContactMapper.h  ContinuousContactMapper.inl  ContinuousDetection.cpp  ContinuousDetection.h  ContinuousIntersection.cpp  ContinuousIntersection.h  ContinuousPenalityContact.cpp  ContinuousPenalityContact.h  ContinuousPenalityContact.inl  ContinuousPenalityContactForceField.cpp  ContinuousPenalityContactForceField.h  ContinuousPenalityContactForceField.inl  DiscreteOrientedPolytope.h  DiscreteOrientedPolytopeModel.h  NormalProjections.h  NormalProjections.hpp  PolytopeModel.cpp  PolytopeModel.h  PolytopeModel.hpp  PolytopeModel.inl  RTriangleModel.cpp  RTriangleModel.h  RTriangleModel.hpp  initContinuousCollision.cpp  initContinuousCollision.h
applications/plugins/ContinuousCollision/ContinuousCollision_test/: CMakeLists.txt  ContinuousCollision_test.cpp  PolytopeModel_test.cpp  test_CollisionPipeline.cpp
applications/plugins/ContinuousCollision/Tests/: CMakeLists.txt  test_CollisionPipeline.cpp  test_ContinuousDetection.cpp  test_ContinuousIntersection.cpp
applications/plugins/ContinuousCollision/doc/: ContinuousCollision.tex  Doxyfile  index.html
applications/plugins/ContinuousCollision/examples/: ContinuousCollision.html  ContinuousCollision.scn
applications/plugins/SixenseHydra/cmake/: FindSixense.cmake
applications/plugins/SofaPython/: PythonMacros.h
cmake/: dependencies.cmake  functions.cmake  postProject.cmake
framework/sofa/core/: CollisionElement.h  CollisionModel.cpp  CollisionModel.h  ComponentLibrary.cpp  ComponentLibrary.h  ConstraintParams.h  ExecParams.h  Mapping.inl  MechanicalParams.h  Multi2Mapping.h  MultiMapping.h  ObjectFactory.cpp  ObjectFactory.h  SofaLibrary.cpp  SofaLibrary.h  VecId.h
framework/sofa/core/behavior/: BaseConstraint.h  BaseConstraintCorrection.h  BaseConstraintSet.h  BaseForceField.h  BaseInteractionForceField.h  BaseLMConstraint.cpp  BaseLMConstraint.h  BaseMass.h  BaseMechanicalState.h  Constraint.h  Constraint.inl  ForceField.h  ForceField.inl  Mass.h  Mass.inl  MechanicalState.h  MixedInteractionConstraint.h  MixedInteractionConstraint.inl  MultiMatrix.h  MultiMatrixAccessor.h  PairInteractionConstraint.h  PairInteractionConstraint.inl  ProjectiveConstraintSet.h  RotationMatrix.h
framework/sofa/core/collision/: Contact.cpp  DetectionOutput.h
framework/sofa/core/loader/: Material.h  MeshLoader.cpp  MeshLoader.h  VoxelLoader.cpp  VoxelLoader.h
framework/sofa/core/objectmodel/: AspectPool.cpp  AspectPool.h  Base.cpp  Base.h  BaseClass.h  BaseContext.cpp  BaseContext.h  BaseLink.cpp  BaseLink.h  BaseObject.cpp  BaseObject.h  DDGNode.h  DataFileName.cpp  DataFileName.h  Event.h  HapticDeviceEvent.cpp  HapticDeviceEvent.h  JoystickEvent.cpp  JoystickEvent.h  Link.h
framework/sofa/core/ps3/: cxa_demangle.cpp
framework/sofa/defaulttype/: BaseMatrix.h  BaseVector.h  LaparoscopicRigidTypes.h  MapMapSparseMatrix.h  RigidTypes.h  SharedTypes.h
framework/sofa/helper/: map_ptr_stable_compare.h
(+67 files in other folders)
